Metrics definition have been included.

--- a/1_introduccion.tex
+++ b/1_introduccion.tex
@@ -19,17 +19,18 @@ The dataset used for this study is part of the 2019 International Skin Imaging C
 The different diseases collected within the data set are: 
 
 \begin{itemize}
-    \item Melanoma (MEL)
-    \item Melanocytic nevus (NV)
-    \item Basal cell carcinoma (BCC)
-    \item Actinic keratosis (AK)
-    \item Benign keratosis (BKL)
-    \item Dermatofibroma (DF)
-    \item Vascular lesion (VASC)
-    \item Squamous cell carcinoma (SCC)
+    \item \textbf{Melanoma (MEL)}: This skin disease is a type of skin cancer in the cells responsible for skin color, called melanocytes \cite{melanoma_American_cancer_society}. Although it is much less common than other types of skin cancer, its tendency to metastasize makes it much more dangerous.
+    \item \textbf{Melanocytic nevus (NV)}: A melanocytic nevus, also known as a mole \cite{noauthor_melanocytic_2023}, is a non-cancerous skin condition that occurs in melanocytes. They usually appear during the first decades of a person's life and can be distinguished between acquired moles, which are a form of benign neoplasia, or excessive cell growth, and congenital moles, which are considered to be malformations.
+    \item \textbf{Basal cell carcinoma (BCC)}: Basal cell skin cancer is one of the most common skin cancers and occurs in the basal cells found in the lower part of the epidermis \cite{basal_cell_American_cancer_society}. Sun overexposure is often linked to its development.
+    \item \textbf{Actinic keratosis (AK)}: An actinic keratosis is a rough, scaly patch, that presents with erythema or skin reddening in parts of the skin that are continuously exposed to the sun, such as the arms, ears, and face, neck or scalp \cite{carmena-ramon_queratosis_2017}. They are usually smaller than 1cm, although sometimes a group of them may converge.
+    \item \textbf{Benign keratosis (BKL)}: This type of keratosis is a common, non-cancerous skin neoplasm (abnormal cell growth) \cite{noauthor_queratosis_nodate}. They have a waxy, scaly, brown, slightly elevated appearance. They usually appear on the face, neck, chest, and back, usually in adulthood, and are harmless and non-contagious.
+    \item \textbf{Dermatofibroma (DF)}: This common skin lesion usually appears as a slow-growing nodule in the dermis \cite{hueso_dermatofibroma_2007}. Although it usually affects both sexes, it is more prevalent in women.
+    \item \textbf{Vascular lesion (VASC)}: These are fairly common lesions affecting the blood vessels of the skin and can be acquired, or congenital, present at birth \cite{noauthor_vascular_nodate}. They may appear as pink, red, or purple marks.
+    \item \textbf{Squamous cell carcinoma (SCC)}: Like basal cell cancer, squamous cell cancer is related to sun damage to the flat cells on the outside of the epidermis \cite{basal_cell_American_cancer_society}.
+
 \end{itemize}
 
-Throughout this work, both the name and the abbreviation in brackets will be used interchangeably.
+Throughout this work, both the name and \textbf{the abbreviation in brackets will be used interchangeably}.
 
 \section{Motivation}
 
