--- a/Dermatological-lesion-classification.bib
+++ b/Dermatological-lesion-classification.bib
@@ -1,4 +1,75 @@
 
+@online{noauthor_vascular_nodate,
+	title = {Vascular Lesions of the Skin - Dermatologic Disorders},
+	url = {https://www.msdmanuals.com/professional/dermatologic-disorders/benign-skin-tumors,-growths,-and-vascular-lesions/vascular-lesions-of-the-skin},
+	abstract = {Vascular Lesions of the Skin - Etiology, pathophysiology, symptoms, signs, diagnosis \& prognosis from the {MSD} Manuals - Medical Professional Version.},
+	titleaddon = {{MSD} Manual Professional Edition},
+	urldate = {2024-01-03},
+	langid = {english},
+}
+
+@article{hueso_dermatofibroma_2007,
+	title = {Dermatofibroma gigante: descripción de un caso y revisión de la literatura},
+	volume = {98},
+	issn = {00017310},
+	url = {https://www.actasdermo.org/es-dermatofibroma-gigante-descripcion-un-caso-articulo-13100619},
+	abstract = {El dermatofibroma es una lesión muy frecuente que suele aparecer como un nódulo en dermis de lento crecimiento que afecta de forma predominante a las mujeres en los miembros inferiores. Se han descrito diferentes variedades clínicas. El dermatofibroma gigante se ha definido como una variante poco común de dermatofibroma de más de 5 cm que presenta las características histológicas típicas y un comportamiento biológico benigno. Presentamos el caso de un varón de 52 años que presentó un dermatofibroma gigante de 6 cm de diámetro en el hombro derecho y hacemos una revisión de los pocos casos de esta variedad descritos en la literatura.},
+	pages = {121--124},
+	number = {2},
+	journaltitle = {Actas Dermo-Sifiliográficas},
+	shortjournal = {Actas Dermo-Sifiliográficas},
+	author = {Hueso, L and Sanmartín, O and Alfaro-Rubio, A and Serra-Guillén, C and Martorell, A and Llombart, B and Requena, C and Nagore, E and Botella-Estrada, R and Guillén, C},
+	date = {2007},
+}
+
+@online{noauthor_queratosis_nodate,
+	title = {Queratosis seborreica-Queratosis seborreica - Síntomas y causas},
+	url = {https://www.mayoclinic.org/es/diseases-conditions/seborrheic-keratosis/symptoms-causes/syc-20353878},
+	abstract = {Infórmate más sobre los síntomas y tratamientos de esta protuberancia común y no cancerosa que aparece gradualmente en la piel a medida que envejeces.},
+	titleaddon = {Mayo Clinic},
+	urldate = {2024-01-03},
+	langid = {spanish},
+	keywords = {{TFM}, introduction},
+}
+
+@article{carmena-ramon_queratosis_2017,
+	title = {Queratosis actínica: nuevo concepto y actualización terapéutica},
+	volume = {49},
+	issn = {02126567},
+	url = {https://www.elsevier.es/es-revista-atencion-primaria-27-articulo-queratosis-actinica-nuevo-concepto-actualizacion-S0212656717301440},
+	doi = {10.1016/j.aprim.2017.01.004},
+	abstract = {La queratosis actínica ({QA}) es motivo de consulta frecuente tanto en atención primaria como en atención especializada. Supone el tercer o cuarto motivo más frecuente de consulta en dermatología, llegando a representar hasta un 5-6\% de los pacientes atendidos. Además, se ha observado que esta prevalencia ha ido en aumento en los últimos 10años, en comparación con otras dermatosis, y se prevé que seguirá aumentado por la mayor esperanza de vida y por los cambios de hábitos de exposición solar acontecidos desde mediados del siglo pasado. El objetivo de este artículo es actualizar los conceptos de {QA} y de campo de cancerización, y exponer las herramientas terapéuticas disponibles actualmente.},
+	pages = {492--497},
+	number = {8},
+	journaltitle = {Atención Primaria},
+	shortjournal = {Atención Primaria},
+	author = {Carmena-Ramón, Rafael and Mateu-Puchades, Almudena and Santos-Alarcón, Sergio and Lucas-Truyols, Sofía},
+	date = {2017},
+}
+
+@inreference{noauthor_melanocytic_2023,
+	title = {Melanocytic nevus},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://en.wikipedia.org/w/index.php?title=Melanocytic_nevus&oldid=1180791786},
+	abstract = {A melanocytic nevus (also known as nevocytic nevus, nevus-cell nevus and commonly as a mole) is usually a noncancerous condition of pigment-producing skin cells. It is a type of melanocytic tumor that contains nevus cells. Some sources equate the term mole with "melanocytic nevus", but there are also sources that equate the term mole with any nevus form.The majority of moles appear during the first two decades of a person's life, with about one in every 100 babies being born with moles. Acquired moles are a form of benign neoplasm, while congenital moles, or congenital nevi, are considered a minor malformation or hamartoma and may be at a higher risk for melanoma. A mole can be either subdermal (under the skin) or a pigmented growth on the skin, formed mostly of a type of cell known as a melanocyte. The high concentration of the body's pigmenting agent, melanin, is responsible for their dark color. Moles are a member of the family of skin lesions known as nevi, occurring commonly in humans.},
+	booktitle = {Wikipedia},
+	urldate = {2024-01-03},
+	date = {2023-10-18},
+	langid = {english},
+	note = {Page Version {ID}: 1180791786},
+	keywords = {Introduction, {TFM}},
+}
+
+@online{noauthor_what_nodate,
+	title = {What Is Melanoma Skin Cancer? {\textbar} What Is Melanoma?},
+	url = {https://www.cancer.org/cancer/types/melanoma-skin-cancer/about/what-is-melanoma.html},
+	shorttitle = {What Is Melanoma Skin Cancer?},
+	abstract = {Melanoma is a form of skin cancer that begins in the melanocytes of the skin. Learn about melanoma here.},
+	urldate = {2024-01-03},
+	langid = {english},
+	keywords = {Introduction, {TFM}},
+}
+
 @online{noauthor_resnet101_nodate,
 	title = {resnet101 — Torchvision main documentation},
 	url = {https://pytorch.org/vision/main/models/generated/torchvision.models.resnet101.html},
@@ -185,7 +256,7 @@
 	keywords = {Computer Science - Computer Vision and Pattern Recognition, Electrical Engineering and Systems Science - Image and Video Processing, State of Art, {TFM}},
 }
 
-@online{noauthor_what_nodate,
+@online{noauthor_what_nodate-1,
 	title = {What is Deep Learning? {\textbar} {IBM}},
 	url = {https://www.ibm.com/topics/deep-learning},
 	shorttitle = {What is Deep Learning?},
@@ -336,7 +407,7 @@
 	keywords = {Computer Science - Machine Learning, State of Art, {TFM}},
 }
 
-@online{noauthor_what_nodate-1,
+@online{noauthor_what_nodate-2,
 	title = {What is Deep Learning? {\textbar} {IBM}},
 	url = {https://www.ibm.com/topics/deep-learning},
 	shorttitle = {What is Deep Learning?},
@@ -346,7 +417,7 @@
 	keywords = {State of Art, {TFM}},
 }
 
-@online{noauthor_what_nodate-2,
+@online{noauthor_what_nodate-3,
 	title = {What are Convolutional Neural Networks? {\textbar} {IBM}},
 	url = {https://www.ibm.com/topics/convolutional-neural-networks},
 	shorttitle = {What are Convolutional Neural Networks?},
